# django-examples

./: .gitignore  pyproject.toml
django_examples/: asgi.py  settings.py  urls.py  wsgi.py
methods_in_templates/: apps.py  urls.py  views.py
methods_in_templates/templates/methods_in_templates/: example.html
